# teste_deploy

teste_deploy/: README.md  report.md
teste_deploy/src/teste_deploy/: crew.py  main.py  pyproject.toml
