[project]
name = "teste_deploy"
version = "0.1.0"
description = "teste_deploy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
teste_deploy = "teste_deploy.main:run"
run_crew = "teste_deploy.main:run"
train = "teste_deploy.main:train"
replay = "teste_deploy.main:replay"
test = "teste_deploy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
